# cookiecutter-fastapi-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
{{ cookiecutter.project_name }}/app/: main.py
{{ cookiecutter.project_name }}/app/api/errors/: http_error.py  validation_error.py
{{ cookiecutter.project_name }}/app/api/routers/: api.py  users.py
{{ cookiecutter.project_name }}/app/core/: __init__.py
{{ cookiecutter.project_name }}/app/schemas/: error.py
{{ cookiecutter.project_name }}/scripts/: env.sh
