[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "app" },
]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
autoflake = "^1.7.7"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.178"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
check = true

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.ruff_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_no_return = true
warn_unreachable = true
warn_incomplete_stub = true
warn_unused_configs = true

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
skip_gitignore = true
extra_standard_library = ["typing_extensions"]
skip = []

[tool.ruff]
line-length = 88
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "PGH", # pygrep-hooks
    "PLC", # pylint
    "PLE", # pylint
    "PLR", # pylint
    "PLW", # pylint
]
ignore = [
    "F401", # Module imported but unused
    "S101", # Use of `assert` detected
    "E999", # SyntaxError
    "C901", # Function is too complex
    "B904", # Must be raise from
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
]
per-file-ignores = {}
target-version = "py310"
