[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "app" },
]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.0"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
autoflake = "^2.0.0"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.217"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
check = true

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.ruff_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_no_return = true
warn_unreachable = true
warn_incomplete_stub = true
warn_unused_configs = true

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
skip_gitignore = true
extra_standard_library = ["typing_extensions"]
skip = []

[tool.ruff]
line-length = 88
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "PGH", # pygrep-hooks
    "PLC", # pylint
    "PLE", # pylint
    "PLR", # pylint
    "PLW", # pylint
    "PIE", # flake8-pie
    "RUF",
]
ignore = [
    "F401",   # Module imported but unused
    "S101",   # Use of `assert` detected
    "E999",   # SyntaxError
    "C901",   # Function is too complex
    "B904",   # Must be raise from
    "RUF001", # String contains ambiguous unicode character
    "RUF002", # Docstring contains ambiguous unicode character
    "RUF003", # Comment contains ambiguous unicode character

]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
]
per-file-ignores = {}
target-version = "py310"
